Bug#51310  ndb_mgm_get_version() not documented  - Move the function out of DOXYGEN_SHOULD_SKIP_INTERNAL and add   doxygen comments describing the function